Fix radios / checkboxes in Dragon NaturallySpeaking 13
Dragon 13 doesn’t understand that clickable things exist with our standard (WebAIM based) visual hiding mixin. The upshot is that all radios and checkboxes stop responding with the current code.

Instead of using the default visually hidden code we can make the element completely translucent instead. It’s already positioned where the faked input is (barring default margins). Clicking on either the (invisible) input or the label causes a state change so there’s no change in behaviour.

Tested in Dragon NaturallySpeaking 13 on IE11 and Firefox. I’ve also tested in ancient and modern versions of Firefox, Chrome and Safari, latest Edge, IE8-11 and Windows Mobile 8.1.

--- a/public/sass/elements/forms/_form-block-labels.scss
+++ b/public/sass/elements/forms/_form-block-labels.scss
@@ -33,7 +33,8 @@
     // IE8 doesn’t support pseudoelements, so we don’t want to hide native elements there.
     @if ($is-ie == false) or ($ie-version == 9) {
       .js-enabled & {
-        @include visually-hidden;
+        margin: 0;
+        @include opacity(0);
       }
     }
   }
